think this fixes the IE11 Win10 modal z-index issue

--- a/packages/app/src/assets/styles/_layout.scss
+++ b/packages/app/src/assets/styles/_layout.scss
@@ -23,4 +23,7 @@ body {
 
 body {
   margin: 0;
+  // Fix for modal z-index issue in IE 11 on Windows 10
+  position: relative;
+  z-index: 0;
 }
